<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_report_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_label"
        android:textColor="@color/text_report_label"
        android:textSize="@dimen/text_report_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_report_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_report_label"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_for_report_tag"
        android:padding="8dp"
        android:text="@string/android"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_report_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_report_tag"
        android:layout_marginTop="16dp"
        android:text="@string/speaker_artur_vasilov"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_all_reports"
        android:layout_below="@id/tv_report_speaker"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_report_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/report_text_how_we_speed_yandex"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </ScrollView>


    <Button
        android:id="@+id/btn_all_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="16dp"
        android:text="@string/all_report"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>