<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_report_label"
        android:layout_width="376dp"
        android:layout_height="67dp"
        android:text="@string/report_label"
        android:textColor="@color/text_report_label"
        android:textSize="@dimen/text_report_label"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/tv_report_tag"
        layout="@layout/view_report_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_report_label" />

    <TextView
        android:id="@+id/tv_report_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/speaker_artur_vasilov"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_report_tag"
        app:layout_constraintBottom_toTopOf="@id/scroll_view" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_report_speaker"
        app:layout_constraintBottom_toTopOf="@id/btn_all_reports">

        <TextView
            android:id="@+id/tv_report_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/report_text_how_we_speed_yandex"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </ScrollView>


    <Button
        android:id="@+id/btn_all_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/all_report"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>