<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_detail_speaker">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_for_report_activity">


        <FrameLayout
            android:id="@+id/cv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">


            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    tools:ignore="contentDescription" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|bottom"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_for_national_flag"
                    android:padding="2dp"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="contentDescription" />
            </android.support.v7.widget.CardView>


        </FrameLayout>

        <TextView
            android:id="@+id/tv_speaker_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@+id/cv_avatar"
            android:lines="2"
            android:text="@string/sergey_ryabov"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_speaker_detail_specialisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_speaker_detail_name"
            android:layout_alignStart="@+id/tv_speaker_detail_name"
            android:layout_marginTop="4dp"
            android:text="@string/mobile_consultant"
            android:textColor="@color/text_detail_speaker" />

        <TextView
            android:id="@+id/tv_speaker_detail_job_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_speaker_detail_specialisation"
            android:layout_alignStart="@+id/tv_speaker_detail_specialisation"
            android:text="@string/digital_nomad_russia" />

        <ImageView
            android:id="@+id/iv_connect_with_telegram"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/tv_speaker_detail_job_country"
            android:layout_alignStart="@+id/tv_speaker_detail_job_country"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/iv_connect_with_twitter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/tv_speaker_detail_job_country"
            android:layout_alignTop="@+id/iv_connect_with_telegram"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_connect_with_telegram"
            android:src="@mipmap/ic_launcher"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/tv_speaker_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_connect_with_telegram"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/sergey_ryabov_description" />

        <include
            android:id="@+id/view_report"
            layout="@layout/holder_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_speaker_detail_description"
            android:layout_marginTop="32dp" />


    </RelativeLayout>

</FrameLayout>
